@@ -1,3 +1,9 @@
+2001-01-18  John Harper  <jsh@eazel.com>
+
+	* sawfish/wm/ext/hide-dialogs.jl: new module, hide dialog
+	windows in groups that don't have the focus. Currently there's
+	no way to enable this except by loading it by hand..
+
 2001-01-15  John Harper  <jsh@eazel.com>
 
 	* sawfish/wm/util/gtkrc.jl (gtkrc-handle-client-msg): removed
